[package]
name = "cryptoki-cli"
version = "0.1.0"
authors = ["Alaric <alaric@doublethink.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptoki = "0.4"
structopt = "0.3"
anyhow = "1"
rsa =  { verify = "0.9", features = ["sha2"] }
rand = "0.8"
hex = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"